Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16123

Changing Computer Name fails to change "NV Hostname" in the registry.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.13
    • NTCore, RosDlls
    • None
    • Thanks for your PR!

    Description

      Using "Start | Settings | Control Panel | System | Computer Name Tab | Change..." and setting a new computer name should change the "NV Hostname" in the registry and for ReactOS it does not. In W2K3, I ran Regshot and then changed the computer name (did not allow the reboot) and then ran Regshot againĀ and did a compare and this showed two registry keys changed. I repeated this procedure in ReactOS and this only showed one registry key changed. Next I ran API Monitor in W2K3 and captured all "SetComputerName" calls and changed the computer name (did not allow the reboot) and it showed only one call to SetComputerNameExW using ComputerNamePhysicalDnsHostname for the first parameter and points to netid.dll as the source. The attached patch causes ReactOS to function like Windows 2003 Server in this regard.

      Also, on reboot the value in the registry for "NV Hostname" should be copied to "Hostname". I captured a Win2003 Server Process Monitor Bootlog what shows that winlogon.exe is the place where this occurs.

      All ReactOS revisions are affected up to and including 0.4.13-dev-531-g4916527.

      Attachments

        1. netid_c.patch
          0.7 kB
          DougLyons
        2. ChangeComputerNameAPI_Monitor1.png
          149 kB
          DougLyons
        3. ChangeComputerName_Registry.png
          157 kB
          DougLyons
        4. ReactOS_ChangeComputerName_Registry.png
          96 kB
          DougLyons
        5. computername_change_fix.patch
          4 kB
          DougLyons
        6. BootLog_Setting_Hostname&Computername2.png
          185 kB
          DougLyons
        7. debug_ChangeComputerName_winlogon.txt
          24 kB
          DougLyons

        Activity

          People

            hbelusca hbelusca
            DougLyons DougLyons
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: