[NETID][WINLOGON] Fix Computer Name Change to update Domain/Hostname on reboot. (#1684) CORE-16123

- NETID: Correct the call when using the "Computer Name Change" in ReactOS.
- WINLOGON: Update the volatile "Hostname" and "Domain" variables from
  their non-volatile counterparts.

Co-authored-by: Hermès Bélusca-Maïto <hermes.belusca-maito@reactos.org>